--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,20 +21,26 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
-
-      - name: Setup Python
+      
+      - name: Install uv
+        uses: astral-sh/setup-uv@v5
+        with:
+          # Install a specific version of uv.
+          version: "0.6.9"
+          enable-cache: true
+          cache-dependency-glob: "uv.lock"
+          
+      - name: "Set up Python"
         uses: actions/setup-python@v5
         with:
-          python-version-file: "pyproject.toml"
-          architecture: "x64"
-          cache: "pip"
+          python-version-file: ".python-version"
           
       - name: Install dependencies
-        run: pip install . pyinstaller
+        run: uv sync
 
       - name: Build Executable
         run: |
-          pyinstaller --onefile Area_Calculator.py
+          uv tool run pyinstaller --onefile Area_Calculator.py
 
       - name: Copy README
         run: cp README.md ./dist/README.txt
